--- a/py_recipe.ipynb
+++ b/py_recipe.ipynb
@@ -119,7 +119,7 @@
     "    except:\n",
     "        texte = \"TEXTE PAS OCÉRISÉ\"\n",
     "\n",
-    "    dateFormate = re.sub(r'[^a-zA-Z0-9]', '', date)\n",
+    "    dateFormate = re.sub(r'[^0-9]', '', date)\n",
     "    titreFormate = re.sub(r'[^a-zA-Z0-9]', '', titre)\n",
     "\n",
     "    nom =  dateFormate + \"_\" + titreFormate[0:20] + '.txt'\n",
@@ -129,6 +129,63 @@
     "    f.close()\n",
     "\n",
     "g.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Traitement des données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nltk in c:\\users\\joshu\\appdata\\roaming\\python\\python38\\site-packages (3.6.3)\n",
+      "Requirement already satisfied: tqdm in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (4.50.2)\n",
+      "Requirement already satisfied: joblib in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (0.17.0)\n",
+      "Requirement already satisfied: click in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: regex in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (2020.10.15)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (1.19.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import nltk\n"
    ]
   },
   {
